# Copyright 2018 Cargill Incorporated
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "splinter-daemon"
version = "0.3.5"
authors = ["Cargill Incorporated"]
edition = "2018"
license = "Apache-2.0"

[[bin]]
name = "splinterd"
path = "src/main.rs"

[dependencies]
splinter = { path = "../libsplinter", features = ["sawtooth-signing-compat"] }
clap = "2.32"
crossbeam-channel = "0.3"
ctrlc = "3.0"
log = "0.4"
flexi_logger = "0.14"
bytes = "0.4"
serde_derive = "1.0.80"
serde = "1.0.80"
serde_yaml = "0.8"
serde_json = "1.0"
percent-encoding = "2.0"
toml = "0.4.8"
protobuf = "2"
openssl = "0.10"
tempdir = "0.3"

[features]
default = []

experimental = [
    "config-builder",
    "config-toml",
]

config-builder = []
config-toml = ["config-builder"]

[package.metadata.deb]
maintainer = "The Splinter Team"
depends = "$auto"
assets = [
    ["packaging/nodes.yaml.example", "/etc/splinter/nodes.yaml.example", "644"],
    ["packaging/splinterd.toml.example", "/etc/splinter/splinterd.toml.example", "644"],
    ["packaging/systemd/splinterd", "/etc/default/splinterd", "644"],
    ["packaging/systemd/splinterd.service", "/lib/systemd/system/splinterd.service", "644"],
    ["target/release/splinterd", "/usr/bin/splinterd", "755"]
]
conf-files = [
    "/etc/default/splinterd",
    "/lib/systemd/system/splinterd.service"
]
maintainer-scripts = "packaging/ubuntu"
extended-description = """\
Splinter is a blockchain-inspired networking platform for distributed \
communications between organizations."""
