# Copyright 2018-2020 Cargill Incorporated
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "splinter-daemon"
version = "0.3.12"
authors = ["Cargill Incorporated"]
edition = "2018"
license = "Apache-2.0"
description = """\
    Splinter is a privacy-focused platform for distributed applications that \
    provides a blockchain-inspired networking environment for communication \
    and transactions between organizations.
"""

[[bin]]
name = "splinterd"
path = "src/main.rs"

[dependencies]
bytes = "0.4"
clap = "2.32"
crossbeam-channel = "0.3"
ctrlc = "3.0"
flexi_logger = "0.14"
health = { path = "../services/health", optional = true }
log = "0.4"
openssl = { version = "0.10", optional = true }
protobuf = "2"
serde = "1.0.80"
serde_derive = "1.0.80"
splinter = { path = "../libsplinter", features = ["rest-api", "rest-api-actix", "sawtooth-signing-compat"] }
tempdir = "0.3"
toml = "0.5"

[features]
default = [
    "config-command-line",
    "config-default",
    "config-env-var",
    "config-toml",
]

stable = ["default"]

experimental = [
    "biome",
    "biome-credentials",
    "biome-key-management",
    "circuit-read",
    "health",
    "proposal-read",
    "scabbard-get-state",
]

biome = ["splinter/biome", "database"]
biome-credentials = ["splinter/biome-credentials", "biome"]
biome-key-management = ["splinter/biome-key-management", "biome"]
circuit-read = ["splinter/circuit-read"]
proposal-read = ["splinter/proposal-read"]
config-default = []
config-command-line = []
config-env-var = []
config-toml = []
database = ["splinter/database"]
scabbard-get-state = ["splinter/scabbard-get-state"]

[package.metadata.deb]
maintainer = "The Splinter Team"
depends = "$auto"
assets = [
    ["packaging/nodes.yaml.example", "/etc/splinter/nodes.yaml.example", "644"],
    ["packaging/splinterd.toml.example", "/etc/splinter/splinterd.toml.example", "644"],
    ["packaging/systemd/splinterd", "/etc/default/splinterd", "644"],
    ["packaging/systemd/splinterd.service", "/lib/systemd/system/splinterd.service", "644"],
    ["target/release/splinterd", "/usr/bin/splinterd", "755"]
]
conf-files = [
    "/etc/default/splinterd",
    "/lib/systemd/system/splinterd.service"
]
maintainer-scripts = "packaging/ubuntu"
extended-description = """\
Splinter is a blockchain-inspired networking platform for distributed \
communications between organizations."""
