# Copyright 2019 Cargill Incorporated
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "grid-schema-tp"
version = "0.1.0"
authors = ["Contributors to Hyperledger Grid"]
description = "Grid Schema Smart Contract"
homepage = "https://grid.hyperledger.org"
edition = "2018"

[dependencies]
clap = "2"
grid-sdk = { path = "../../sdk" }
cfg-if = "0.1"
hex = "0.3.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
rust_crypto = {git = "https://github.com/agunde406/rust-crypto", branch="wasm_sha2"}
sabre-sdk = "0.2"

[target.'cfg(unix)'.dependencies]
rust-crypto = "0.2.36"
sawtooth-sdk = {git = "https://github.com/hyperledger/sawtooth-sdk-rust"}
rustc-serialize = "0.3.22"
log = "0.3.0"
log4rs = "0.7.0"
sawtooth-zmq = "0.8.2-dev5"
