# Copyright 2018 Cargill Incorporated
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "private-xo-service"
version = "0.3.7"
authors = ["Cargill Incorporated"]
edition = "2018"
license = "Apache-2.0"

[[bin]]
name = "private-xo"
path = "src/main.rs"

[dependencies]
base64 = "0.10"
clap = "2.32"
crossbeam-channel = "0.3"
ctrlc = "3.0"
iron = "0.6"
log = "0.4"
protobuf = "2.2"
router = "0.6"
sawtooth-sdk = "0.3"
sawtooth-xo = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
simple_logger = "1.0"
splinter = { path = "../../libsplinter" }
transact = { version = "0.1", features = [ "sawtooth-compat" ] }
urlencoded = "0.6"
uuid = { version = "0.7", features = ["v4"] }

[build-dependencies]
glob = "0.2"
protoc-rust = "2"
