# Copyright 2018 Cargill Incorporated
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "pike-api"
version = "0.0.0"
authors = ["Cargill, Incorporated"]

[dependencies]
rocket = "0.3.3"
rocket_codegen = "0.3.8"
rocket_cors = "0.2.0"
serde = "1.0"
serde_yaml = "0.7"
serde_json = "1.0"
serde_derive = "1.0"
sawtooth-sdk = "^0.2"
pike_db = { path = "../db/pike_db/" }
protobuf = "2"
uuid = { version = "0.5", features = ["v4"] }

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]

[build-dependencies]
protoc-rust = "2"
