# Copyright 2018 Cargill Incorporated
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "pike-sde"
version = "0.1.0"
authors = ["Cargill"]
build = "build.rs"

[dependencies]
sawtooth-sdk = "^0.1"
pike_db = { path = "../db/pike_db/" }
addresser = { path = "../addresser/" }
log = "0.3.8"
simple_logger = "0.4.0"
clap = "2"
protobuf = "2"
uuid = { version = "0.5", features = ["v4"] }
chan-signal = "0.3.1"
regex = "0.2.3"
serde_json = "1.0"

[build-dependencies]
protoc-rust = "2"
