[package]
name = "health"
version = "0.3.9"
authors = ["Cargill Incorporated"]
edition = "2018"
license = "Apache-2.0"
description = """\
    Splinter is a privacy-focused platform for distributed applications that \
    provides a blockchain-inspired networking environment for communication \
    and transactions between organizations.
"""

[dependencies]
log = "0.3.0"
splinter = { path = "../../libsplinter" }

[features]
default = []

stable = ["default"]

experimental = []
