# Copyright 2018-2020 Cargill Incorporated
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "scabbard"
version = "0.3.14"
authors = ["Cargill Incorporated"]
edition = "2018"
license = "Apache-2.0"
description = """\
    Splinter is a privacy-focused platform for distributed applications that \
    provides a blockchain-inspired networking environment for communication \
    and transactions between organizations.
"""

[[bin]]
name = "scabbard"
path = "src/cli/main.rs"

[dependencies]
clap = "2"
dirs = "2.0"
flexi_logger = "0.14"
log = "0.4"
sabre-sdk = "0.5"
sawtooth-sdk = { version = "0.4", features = ["transact-compat"] }
transact = { version = "0.2", features = ["contract-archive"] }
splinter = { path = "../../libsplinter", features = ["sawtooth-signing-compat", "scabbard-client"] }

[dev-dependencies]
serial_test = "0.3"
tempfile = "3.1"

[features]
default = []

stable = ["default"]

experimental = [
  "contract",
  "contract-registry",
  "execute",
  "namespace",
  "namespace-permission",
  "smart-permissions",
]

contract = []
contract-registry = []
execute = []
namespace = []
namespace-permission = []
smart-permissions = []

[package.metadata.deb]
maintainer = "The Splinter Team"
depends = "$auto"
maintainer-scripts = "packaging/ubuntu"
