# Copyright 2019 Cargill Incorporated
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "gameroom-daemon"
version = "0.3.1"
authors = ["Cargill Incorporated"]
edition = "2018"

[dependencies]
actix = { version = "0.8", default-features = false }
actix-web = { version = "1.0", default-features = false, features = ["flate2-zlib"] }
flate2 = "1.0.10"
awc = "0.2"
bcrypt = "0.5"
clap = "2"
ctrlc = "3.0"
diesel = { version = "1.0.0", features = ["serde_json"] }
hyper = "0.12"
tokio = "0.1"
gameroom-database = { path = "../database" }
log = "0.4"
flexi_logger = "0.14"
libsplinter = { path = "../../../libsplinter" }
futures = "0.1"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
percent-encoding = "2.0"
uuid = { version = "0.7", features = ["v4"]}

[features]
test-node-endpoint = []
test-authorization-handler = []

[[bin]]
name = "gameroomd"
path = "src/main.rs"
