# Copyright 2018-2020 Cargill Incorporated
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "gameroom-database"
version = "0.3.14"
authors = ["Cargill Incorporated"]
edition = "2018"
license = "Apache-2.0"
description = """\
    Gameroom is an example Splinter application that allows you to set up \
    private, multi-party circuits (called "gamerooms") and play tic tac toe \
    with shared state, as managed by two-phase-commit consensus between the \
    participants.
"""

[dependencies]
diesel = { version = "1.0.0", features = ["postgres", "r2d2", "serde_json"] }
serde_json = "1.0"

[features]
default = []

stable = ["default"]

experimental = []
