# Copyright 2018-2020 Cargill Incorporated
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "private-counter-cli"
version = "0.3.11"
authors = ["Cargill Incorporated"]
edition = "2018"
license = "Apache-2.0"
description = """\
    Private Counter is an example Splinter application that "counts" \
    (adds numbers to a shared counter) on a multi-party Splinter circuit.
"""

[[bin]]
name = "pcounter"
path = "src/main.rs"

[dependencies]
clap = "2.32"
log = "0.3.0"
simple_logger = "0.4.0"

[features]
default = []

stable = ["default"]

experimental = []
